--- a/client/sentiments/sentiments.html
+++ b/client/sentiments/sentiments.html
@@ -2,19 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-<style>
-body {
-  margin: 0;
-}
-</style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="sentiments.css">
     <script defer src="https://unpkg.com/vue@2.4.2/dist/vue.min.js"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/6.0.1/highstock.js"></script>
     <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-    <script defer src="linechart.js"></script>
+    <script defer src="sentiments.js"></script>
   </head>
   <body>
-    <div id="linechart"></div>
+    <div id="sentiments"></div>
   </body>
 </html>
