register, -vue-runtime

--- a/client/comments/comments.html
+++ b/client/comments/comments.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" />
-    <link rel="stylesheet" href="comments.css">
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.runtime.min.js"></script>
+    <link rel="stylesheet" href="./comments.css" />
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-    <script defer src="comments.js"></script>
+    <script defer src="./comments.js"></script>
   </head>
   <body>
     <div id="comments"></div>
