--- a/client/linechart/linechart.html
+++ b/client/linechart/linechart.html
@@ -7,7 +7,7 @@ body {
   margin: 0;
 }
 </style>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.runtime.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/6.0.1/highstock.js"></script>
     <script defer src="linechart.js"></script>
