--- a/client/sentiment/sentiment.html
+++ b/client/sentiment/sentiment.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" />
     <link rel="stylesheet" href="../comments/comments.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/6.0.1/highstock.js"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.runtime.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.4/vue.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
